--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,20 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+	div(class="row")
+		div(class="col s4" id="login-form")
+			div(class="card blue-grey darken-1" id="form-layout")
+				div(class="row")
+					i(class="large material-icons" id="form-icon") account_circle
+				div(class="row")
+					form(action='/login', method='POST')
+						div(class="form-group" id="form-card")
+							input(type='text', name='username' class='form-control col s12', placeholder='Username',required, autofocus)
+							input(type='password', name='password' class='form-control col s12', placeholder='Password', required)
+							button(class="waves-effect waves-light btn", type='submit') Sign in
+				a(href='/signup') Create an account 
+				
+
+			#message
+				if message
+					h1.text-center.error-message #{message}
