--- a/views/home.pug
+++ b/views/home.pug
@@ -1,13 +1,25 @@
 extends layout
 
 block content
-	div.container
-		div.row
-			div.col-sm-6.col-md-4.col-md-offset-4
-				div(class="card blue-grey darken-1" id="form-layout")
-					div(class="card-content white-text")
-						#user
-						span(class="card-title") Hello #{user.username}
-						p Here is the email you entered: #{user.email}
-					div(class="card-action")
-						a(href='/signout', class='text-center new-account') Sign Out
+	div(class="row")
+		h1 User Info
+	div(class="row")
+			div(class="col s12 center-align")
+				div(class="card" id="form-layout")
+					div(class="row")
+						i(class="large material-icons" id="form-icon") account_circle
+					div(class="row")
+						div(class="col")
+							form(action='/update', method='POST')
+								div(class="form-group")
+									#user
+									input(type='text', name='firstName', placeholder='Firstname' value=user.firstName, required)
+									input(type='text', name='lastName', placeholder='Lastname' value=user.lastName ,required)
+									input(type='text', name='username', placeholder='Username' value=user.username, required)
+									input(type='password', name='password', placeholder='Password', required)
+									input(type='password', name='newPassword', placeholder='New Password')
+									input(type='email', name='email', placeholder='Email' value=user.email, required)
+									button(class="waves-effect btn", type='submit') Update
+					#flash
+						if flash
+							h4(class="text-center.error-message") #{flash}
