--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,31 @@
 extends layout
 
 block content
+	div(class="parallax-container upper-parallax")
+		div(class="parallax")
+			img(src="https://apod.nasa.gov/apod/image/2007/NeowiseNebs_Oszywa_3000.jpg")
+	div(class="section white")
+		div(class="row center")
+			h1 Join the network
 	div(class="row")
-		div(class="col s4" id="login-form")
-			div(class="card blue-grey darken-1" id="form-layout")
+		div(class="col s12 center-align")
+			div(class="card" id="form-layout")
 				div(class="row")
 					i(class="large material-icons" id="form-icon") account_circle
-				div(class="row")
-					form(action='/login', method='POST')
-						div(class="form-group" id="form-card")
-							input(type='text', name='username' class='form-control col s12', placeholder='Username',required, autofocus)
-							input(type='password', name='password' class='form-control col s12', placeholder='Password', required)
-							button(class="waves-effect waves-light btn", type='submit') Sign in
-				a(href='/signup') Create an account 
-				
+					div(class="row")
+						div(class="col")
+							form(action='/login', method='POST' class="col s12")
+								div(class="form-group" id="form-card")
+									input(type='text', name='username' class='form-control', placeholder='Username',required, autofocus)
+									input(type='password', name='password' class='form-control', placeholder='Password', required)
+									button(class="waves-effect waves-light btn", type='submit') Sign in
+					div(class="row center-align")
+						a(href='/signup') Create an account 
+					
 
-			#message
-				if message
-					h1.text-center.error-message #{message}
+				#message
+					if message
+						h1.text-center.error-message #{message}
+	div(class="parallax-container")
+		div(class="parallax")
+			img(src="https://apod.nasa.gov/apod/image/2007/NeowiseNebs_Oszywa_3000.jpg")
