--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,26 +1,20 @@
 doctype html
 html
-  head
-    title= title
-    link(type="text/css" rel="stylesheet" href="/stylesheets/materialize/css/materialize.min.css"  media="screen,projection")
-    link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
-    link( href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
-    script(src="/helper.js")
-  body
-    nav
-      div(class="nav-wrapper")
-        ul(class="left hide-on-med-and-down")
-          li 
-            a(href='/home') HOME
-          li 
-            a(href='/posts') FEED
-          li 
-            a PROFILE
-    div(class="container")
-      block content
-  footer(class="page-footer")
-    div(class="container")
-      div(class="row")
-        div(class="col 16 s12")
-          h4 FOOTER
-    
+	head
+		title= title
+		link(type="text/css" rel="stylesheet" href="/stylesheets/materialize/css/materialize.min.css"  media="screen,projection")
+		link( href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+		script(src="/stylesheets/materialize/js/materialize.min.js")
+		script(src="/helper.js")
+		link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
+	nav(class="dark-primary-color")
+		div(class="nav-wrapper")
+			ul(class="left hide-on-med-and-down")
+				li 
+					a(href='/home') PROFILE
+				li 
+					a(href='/posts') POSTS
+			ul(class="right")
+				li
+					a(href='/signout') LOGOUT
+	block content
