--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
 	div(class="parallax-container upper-parallax")
 		div(class="parallax")
-			img(src="https://apod.nasa.gov/apod/image/2007/NeowiseNebs_Oszywa_3000.jpg")
+			img(src="/parallaxbg.jpg")
 	div(class="section white")
 		div(class="row center")
 			h1 Join the network
@@ -28,4 +28,4 @@ block content
 						h1.text-center.error-message #{message}
 	div(class="parallax-container")
 		div(class="parallax")
-			img(src="https://apod.nasa.gov/apod/image/2007/NeowiseNebs_Oszywa_3000.jpg")
+			img(src="/parallaxbg.jpg")
