--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,7 +9,7 @@ html
 		link(type="text/css" rel="stylesheet" href="/stylesheets/style.css")
 	nav(class="dark-primary-color")
 		div(class="nav-wrapper")
-			ul(class="left hide-on-med-and-down")
+			ul(class="left")
 				li 
 					a(href='/home') PROFILE
 				li 
